# gpt_from_scratch

./: .gitignore  main.py  nvidia-smi.out.txt  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  postCreateScript.sh  setGitAttributes.sh
jupyter/: gpt-dev.ipynb
python/: gpt-dev.py
