[project]
name = "gpt-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.4.9",
    "matplotlib>=3.10.7",
    "nbstripout>=0.8.1",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "torch>=2.8.0",
]
